--- a/videosdk_room_stats/pubspec.yaml
+++ b/videosdk_room_stats/pubspec.yaml
@@ -1,13 +1,13 @@
 name: videosdk_room_stats
 description: VideoSDK Room Stats allows you to collect Video call metrics from the videosdk library.
-version: 0.0.4
+version: 0.0.4+F
 homepage: "https://videosdk.live/"
 repository: "https://github.com/videosdk-live/videosdk-rtc-flutter-sdk-example"
 documentation: https://docs.videosdk.live/
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=2.0.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   events2: ^1.0.0
@@ -17,7 +17,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 platforms:
   android:
