--- a/videosdk_webrtc/example/pubspec.yaml
+++ b/videosdk_webrtc/example/pubspec.yaml
@@ -3,22 +3,22 @@ description: Demonstrates how to use the webrtc plugin.
 version: 1.0.0
 publish_to: none
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  
+  sdk: '>=3.0.0 <4.0.0'
+
 dependencies:
+  collection: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.8
   flutter:
     sdk: flutter
   flutter_background: ^1.0.0
-  videosdk_webrtc:
-    path: ../
   # Required for MediaRecorder example
   path_provider: ^2.1.4
   permission_handler: 10.2.0
   sdp_transform: ^0.3.2
-
+  videosdk_webrtc:
+    path: ../
 
 dev_dependencies:
   flutter_test:
