--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://dart.dev/guides/libraries/private-files
 
+# Flutter plugins related
+.flutter-plugins
+.flutter-plugins-dependencies
+
 # Files and directories created by pub
 .dart_tool/
 .buildlog
