--- a/videosdk/pubspec.yaml
+++ b/videosdk/pubspec.yaml
@@ -1,6 +1,6 @@
 name: videosdk
 description: Video SDK Flutter to simply integrate Audio & Video Calling API or Live Video Streaming API to your app with just a few lines of code.
-version: 1.3.0
+version: 1.3.0+F
 homepage: "https://videosdk.live/"
 repository: "https://github.com/videosdk-live/videosdk-rtc-flutter-sdk-example"
 documentation: https://docs.videosdk.live/
@@ -8,34 +8,31 @@ documentation: https://docs.videosdk.live/
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
-  flutter: ">=2.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  collection: ^1.19.0
+  dart_webrtc: 1.4.10
+  device_info_plus: 11.3.0
+  encrypt: ^5.0.3
+  events2: ^1.0.0
+  flutter_foreground_task: 8.17.0
+  h264_profile_level_id: ^0.2.1
+  http: ^1.3.0
+  permission_handler: 11.3.1
+  platform_detect: 2.1.0
   plugin_platform_interface: ^2.1.8
   random_string: ^2.3.1
-  events2: ^1.0.0
-  collection: ^1.18.0
   sdp_transform: ^0.3.2
-  h264_profile_level_id: ^0.2.1
-  flutter_foreground_task: 8.10.4
-  synchronized: ^3.3.0
-  http: ^1.2.2
-  encrypt: ^5.0.3
-  videosdk_room_stats: 0.0.4
+  synchronized: ^3.3.0+3
   videosdk_otel: ^0.0.2
-  dart_webrtc: 1.4.10
-  device_info_plus: 11.0.0
-  platform_detect: 2.1.0
-  web: 1.1.0
-  permission_handler: 11.3.1
+  videosdk_room_stats: 0.0.4
   videosdk_webrtc: 0.0.4
-
-
-
+  web: 1.1.0
 
 dev_dependencies:
   flutter_test:
