--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Flutter plugins related
 .flutter-plugins
 .flutter-plugins-dependencies
+**/ephemeral/
 
 # Files and directories created by pub
 .dart_tool/
